Fix a single iteration
Following flow works. Test suite is added.
- getTaskLimits
- Submit a task
- Immediately monitor task results in inprogress
- Monitoring after sometime results in successful
- Downloading a requested file is successful and the file is received.
